--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ molvs = "^0.1.1"
 matplotlib = "^3.9.2"
 torch = {version = "^2.4.1+cpu", source = "pytorch_cpu"}
 torch-geometric = "^2.6.1"
+pgvector = "^0.3.5"
 
 
 [[tool.poetry.source]]
