--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ matplotlib = "^3.9.2"
 torch = {version = "^2.4.1+cpu", source = "pytorch_cpu"}
 torch-geometric = "^2.6.1"
 pgvector = "^0.3.5"
+pytest = "^8.3.3"
 
 
 [[tool.poetry.source]]
