--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ services:
     hostname: db
     image: ankane/pgvector
     ports:
-     - 5432:5432
+     - 5432:${POSTGRES_PORT}
     restart: always
     environment:
       - POSTGRES_DB=${POSTGRES_DB}
