--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,8 @@ torch = {version = "^2.4.1+cpu", source = "pytorch_cpu"}
 torch-geometric = "^2.6.1"
 pgvector = "^0.3.5"
 pytest = "^8.3.3"
+sqlalchemy = "^2.0.35"
+psycopg2-binary = "^2.9.9"
 
 
 [[tool.poetry.source]]
