remove magix numbers and update env file

--- a/.env
+++ b/.env
@@ -4,3 +4,4 @@ POSTGRES_PASSWORD=admin
 POSTGRES_HOST_AUTH_METHOD=trust
 POSTGRES_VOLUME=/home/tibor/Documents/msc-datascience/2024w/toxic_postgress_data
 PYTHONPATH=/home/tibor/Documents/msc-datascience/2024w/ToxicByGNN/
+POSTGRES_PORT=5432
