update env variables

--- a/.env
+++ b/.env
@@ -2,6 +2,7 @@ POSTGRES_DB=toxicity
 POSTGRES_USER=admin
 POSTGRES_PASSWORD=admin
 POSTGRES_HOST_AUTH_METHOD=trust
+POSTGRES_INIT=1
+POSTGRES_PORT=5432
 POSTGRES_VOLUME=/home/tibor/Documents/msc-datascience/2024w/toxic_postgress_data
 PYTHONPATH=/home/tibor/Documents/msc-datascience/2024w/ToxicByGNN/
-POSTGRES_PORT=5432
