--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,12 +18,17 @@ pgvector = "^0.3.5"
 pytest = "^8.3.3"
 sqlalchemy = "^2.0.35"
 psycopg2-binary = "^2.9.9"
+scikit-learn = "^1.5.2"
 
 
 [[tool.poetry.source]]
 name = "pytorch_cpu"
 url = "https://download.pytorch.org/whl/cpu"
 priority = "explicit"
+
+
+[tool.poetry.group.dev.dependencies]
+ipykernel = "^6.29.5"
 
 [build-system]
 requires = ["poetry-core"]
